# ixl-grader

./: STUDENT_OVERRIDES.md  pyproject.toml
samples/: README.md  sample_report.csv  sample_student_overrides.csv
src/ixl_grader/: argument_parser.py  report.py
src/ixl_grader/core/: persistence.py  report.py  student_overrides.py
src/ixl_grader/ui/: __init__.py  app.py
src/ixl_grader/ui/components/: __init__.py  file_uploader.py  file_viewer.py  footer.py  grade_button.py  grading_info.py  grading_params.py  results_summary.py  sample_calculations.py  student_overrides.py
src/ixl_grader/ui/session/: __init__.py  file_upload.py  grade.py  report.py  student_overrides.py  updater.py
src/scripts/: main.py
