[project]
name = "ixl-grader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.3.2",
]

[project.scripts]
ixl-grader = "scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
